# SenseCAP_Indicator_ESP32

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: HA.yml
components/LoRaWAN/: CMakeLists.txt  Kconfig.projbuild
components/LoRaWAN/adapter/: systime.c
components/LoRaWAN/common/: NvmDataMgmt.c  NvmDataMgmt.h
components/LoRaWAN/common/LmHandler/: LmHandler.c  LmHandler.h
components/LoRaWAN/mac/: LoRaMac.c  LoRaMacKconfig.h  LoRaMacTypes.h
components/LoRaWAN/soft-se/: aes.c  aes.h  cmac.c  soft-se-hal.c  soft-se.c
components/LoRaWAN/utilities/: utilities.c
components/bsp/: CMakeLists.txt  Kconfig.projbuild
components/bsp/include/: bsp_board.h
components/i2c_devices/io_expander/: tca9535.c
components/i2c_devices/touch_panel/: ft5x06.c  gt911.c  tt21100.c
components/liblorahub/: CMakeLists.txt  Kconfig.projbuild  lorahub_aux.c  lorahub_aux.h  lorahub_hal.c  lorahub_hal.h  lorahub_hal_rx.c  lorahub_hal_rx.h  lorahub_hal_tx.c  lorahub_hal_tx.h
components/lora/: CMakeLists.txt  bsp_sx126x.h  radio.c  radio.h  sx126x-board.h  sx126x_init.c  sx126x_lorahub.c  sx126x_lorahub.h  sx126x_sensecap_board.c  timer.c  timer.h
components/lora_disabled/: radio.c  sx126x.c  sx126x.h  sx126x_sensecap_board.c
components/radio_drivers/: CMakeLists.txt  llcc68_hal.c  lr11xx_hal.c  radio_context.h  sx126x_hal.c
components/radio_drivers/lr11xx_driver/: CHANGELOG.md
components/radio_drivers/lr11xx_driver/src/: CMakeLists.txt
components/smtc_ral/: CMakeLists.txt
components/smtc_ral/bsp/: .clang-format
components/smtc_ral/bsp/llcc68/: ral_llcc68_bsp.c  smtc_shield_llcc68mb2cas.c
components/smtc_ral/bsp/lr11xx/: ral_lr11xxx_bsp.c  smtc_shield_lr1121mb1dis.h  smtc_shield_lr11x1_common.h  smtc_shield_lr11xx_common.h  smtc_shield_lr11xx_types.h
components/smtc_ral/bsp/sx126x/: heltec_wifi_lora_32_v3.h  ral_sx126x_bsp.c  smtc_shield_sx1261mb1bas.c  smtc_shield_sx1262mb1cas.c  smtc_shield_sx1262mb1cas.h  smtc_shield_sx1268mb1gas.h  smtc_shield_sx126x.h  smtc_shield_sx126x_types.h
components/smtc_ral/src/: ral_llcc68.c  ral_llcc68.h  ral_llcc68_bsp.h  ral_lr11xx.c  ral_lr11xx_bsp.h  ral_sx126x.h  ral_sx126x_bsp.h
examples/button/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/button/main/: main.c
examples/console/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/console/main/: CMakeLists.txt  main.c
examples/esp32_rp2040_comm/: CMakeLists.txt  README.md
examples/esp32_rp2040_comm/main/: CMakeLists.txt  main.c
examples/factory/: README.md
examples/indicator_basis/: CHANGELOG.md  CMakeLists.txt  README.md
examples/indicator_basis/main/: view_data.h
examples/indicator_ha/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/indicator_ha/main/: CMakeLists.txt  config.h  ha_config.h  main.c  view_data.h
examples/indicator_lora/: CMakeLists.txt  README.md
examples/indicator_lora/main/: CMakeLists.txt  main.c
examples/indicator_lorahub/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/indicator_lorahub/main/: CMakeLists.txt  Kconfig.projbuild  indicator_enabler.h  indicator_model.c  indicator_view.c  main.c  view_data.h
examples/indicator_lorawan/: CMakeLists.txt  README.md  _decoder_uplink.js  sdkconfig.defaults
examples/indicator_lorawan/docs/: ChirpStackV4_Decoder.js
examples/indicator_lorawan/main/: CMakeLists.txt  config.h  indicator_enabler.h  indicator_model.c  main.c  (+3 more)
examples/indicator_matter/: CMakeLists.txt  README.md  partitions.csv  partitions_thread.csv  sdkconfig.defaults
examples/indicator_openai/: CMakeLists.txt  README.md  sdkconfig.bak  sdkconfig.defaults
examples/indicator_openai_api/: CMakeLists.txt  README.md
examples/indicator_openai_api/main/: CMakeLists.txt  config.h  main.c  view_data.h  view_data.h.bak
examples/indicator_openai_api/main/controller/: indicator_controller.c
examples/indicator_openai_api/main/model/: indicator_btn.c  indicator_city.h  indicator_cmd.c  indicator_cmd.h  indicator_display.c  indicator_display.h  indicator_model.c  indicator_openai.c  indicator_openai.h  indicator_sensor.c  indicator_sensor.h  indicator_storage.c  indicator_storage.h  indicator_time.c
examples/indicator_openai_api/main/ui/: ui.c  ui.h  ui.h.bak  ui_helpers.c  ui_img_background_png.c  ui_img_display_png.c  ui_img_temp_2_png.c
examples/indicator_openai_api/main/ui/images/: ui_img_chatgpt_log_png.c  ui_img_openai_log_png.c  ui_img_sensecap_log_png.c
examples/indicator_openai_api/main/ui/screens/: ui_screen_chartgpt_1.c  ui_screen_chartgpt_2.c  ui_screen_openai.c  ui_screen_openai_key.c
examples/indicator_openai_api/main/view/: indicator_view.c
examples/lora_demo/: README.md  sdkconfig.defaults
examples/lorawan_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/lvgl_demos/: sdkconfig.defaults
examples/manufacture/: CMakeLists.txt  sdkconfig.defaults
examples/photo_demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/squareline_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/terminal_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/vision_v2_display/: .clang-format  .cproject  .project  CMakeLists.txt  README.md  XIAO_test.ino  build.bat  build.sh  flash.bat  flash.sh  partitions.csv
examples/vision_v2_display/main/: CMakeLists.txt  lv_port.c  main.c  main.h  view.c
examples/vision_v2_display/main/draw/: app_boxes.c  app_boxes.h  app_image.c  app_image.h  app_keypoints.c  app_keypoints.h  app_point.c  app_point.h  image.c  image.h  rectangle.c  rectangle.h
examples/vision_v2_display/main/esp32_rp2040/: esp32_rp2040.c  esp32_rp2040.h
examples/vision_v2_display/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
examples/vision_v2_display/main/ui/components/: ui_comp_hook.c
examples/vision_v2_display/main/ui/screens/: ui_Screen1.c
examples/vision_v2_display/main/util/: indicator_btn.c  indicator_btn.h
examples/vision_v2_wifi_spj/: vision_v2_wifi.spj
tools/patch/: README.md  install_patch.sh
(+439 files in other folders)
